# Malas

./: .env  .gitignore  Cargo.toml  README.md  bun.lockb  index.ts  package.json
cores/: Cargo.toml
cores/src/: auth.rs  db.rs  main.rs  router.rs  struc.rs
src/public/: index.html
src/secret/: imphnen.ts  login.ts
src/secret/dbs/: postingan.dbs.json  riky.encrypt.dbs
src/secret/keys/: kunci.ts
views/: Cargo.toml  index.html
views/src/: lib.rs
