[package]
name = "cores"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.189", features = ["derive"] }
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
argon2 = "0.5.3"
password-hash = "0.5.0"