[package]
name = "views"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6.0"
gloo = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }